--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
     <h2>สมัครสมาชิก</h2>
     <form action="register_success" method="post">
         <label for="username">ชื่อผู้ใช้:</label>
-        <input type="text" id="username" name="username" required><br><br>
+        <input type="text" id"username" name="username" required><br><br>
 
         <label for="email">อีเมล:</label>
         <input type="email" id="email" name="email" required><br><br>
