--- a/register.html
+++ b/register.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>สมัครสมาชิก</title>
+    <link rel="stylesheet" href="StyleRegister.css">
 </head>
 <body>
     <h2>สมัครสมาชิก</h2>
     <form action="register_success" method="post">
+       
         <label for="username">ชื่อผู้ใช้:</label>
         <input type="text" id"username" name="username" required><br><br>
 
