--- a/index.html
+++ b/index.html
@@ -9,39 +9,32 @@
 </head>
 
 <body>
-    <div class="navbar">
-        <img src="" alt="">logo
-        <a href="">Home</a>
-        <a href="">Gallery</a>
-        <a href="">Card</a>        
-        <a href="">Register</a>
-        <a href="Login.html">Login</a>
+    <header>
+        <nav>
+            <div class="navbar">
+                <h1>Pixora</h1>
+                <div class="nav-3">
+                    <a href="">Home</a>
+                    <a href="">Gallery</a>
+                    <a href="">Card</a>
+                </div>
+                <div class="nav-2">
+                    <a href="">Register</a>
+                    <a href="Login.html">Login</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div class="text-ads">
+        <h1>Capture the World, Share Your Vision.</h1>
+        <div class="text-span">
+            <span>Join a community where every photo tells a story.</span>
+        </div>
     </div>
 
-    <div class="search">
-        <input type="text" placeholder="Search...">
-    </div>
-
-    <div class="Filter">
-        <button>All</button>
-        <button>Images</button>
-        <button>Video</button>
-        <button>Editorial</button>
-        <button>3D</button>
-        <button>AI Solution</button>
-    </div>
-    
-    <div class="ImageContainer">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+    <div class="btn-getstart">
+        <button><a href="Login.html">Get Start</a></button>
     </div>
 </body>
 
