--- a/Login.html
+++ b/Login.html
@@ -15,6 +15,13 @@
             <br>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
+            
+            <label>Login Type</label>
+            <select name="role" required>
+                <option value="user">User</option>
+                <option value="admin">Admin</option>
+            </select>
+
             <br>
             <button type="submit">Login</button>
         </form>
