mod login + LoginSuccess ให้ลองรับ password_hash

--- a/Login.html
+++ b/Login.html
@@ -15,15 +15,14 @@
             <br>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-            
-            <label>Login Type</label>
-            <select name="role" required>
+            <br>
+            <label for="role">Login Type</label>
+            <select id="role" name="role" required>
                 <option value="user">User</option>
                 <option value="admin">Admin</option>
             </select>
-
             <br>
-            <button type="submit">Login</button>
+            <button type="submit" name="login">Login</button>
         </form>
     </div>
 </body>
