footer in index

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
     <div class="btn-getstart">
         <button><a href="Login.html">Get Start</a></button>
     </div>
+
+    <div class="footer-side">
+        <footer>
+            <p>© 2024 Pixora. All rights reserved.</p>
+        </footer>
+    </div>
 </body>
 
 </html>
