--- a/index.html
+++ b/index.html
@@ -9,39 +9,78 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="navbar">
-                <h1>Pixora</h1>
-                <div class="nav-3">
-                    <a href="">Home</a>
-                    <a href="">Gallery</a>
-                    <a href="">Card</a>
+    <section class="page-1">
+        <header>
+            <nav>
+                <div class="navbar">
+                    <h1>Pixora</h1>
+                    <div class="nav-3">
+                        <a href="">Home</a>
+                        <a href="">Gallery</a>
+                        <a href="">Card</a>
+                    </div>
+                    <div class="nav-2">
+                        <a href="">Register</a>
+                        <a href="Login.html">Login</a>
+                    </div>
                 </div>
-                <div class="nav-2">
-                    <a href="">Register</a>
-                    <a href="Login.html">Login</a>
+            </nav>
+        </header>
+
+        <video autoplay muted loop playsinline class="video-bg">
+            <source src="video3.mp4" type="video/mp4">
+            <!--<img src="https://www.pexels.com/download/video/34197941/" alt="background video">-->
+        </video>
+
+        <div class="video-back">
+            <div class="text-ads">
+                <h1>Capture the World, Share Your Vision.</h1>
+                <div class="text-span">
+                    <span>Join a community where every photo tells a story.</span>
                 </div>
             </div>
-        </nav>
-    </header>
 
-    <div class="text-ads">
-        <h1>Capture the World, Share Your Vision.</h1>
-        <div class="text-span">
-            <span>Join a community where every photo tells a story.</span>
+            <div class="btn-getstart">
+                <button><a href="Login.html">Get Start</a></button>
+            </div>
         </div>
+    </section>
+
+
+    <hr>
+
+    <div class="page-2">
+        <h1>Become a Contributor</h1>
+        <section class="all-card">
+            <div class="card">
+                <i class="icon">📷</i>
+                <h3>Create</h3>
+                <p>Produce high-quality images and videos for our customers to download.</p>
+            </div>
+
+            <div class="card">
+                <i class="icon">📝</i>
+                <h3>Submit</h3>
+                <p>Upload your content with our easy-to-use platform, and get tips for success.</p>
+            </div>
+
+            <div class="card">
+                <i class="icon">✉️</i>
+                <h3>Get paid</h3>
+                <p>Make money every time your content is downloaded by one of our worldwide customers.</p>
+            </div>
+
+            <div class="card">
+                <i class="icon">👤</i>
+                <h3>Refer</h3>
+                <p>Earn even more by referring new contributors and customers.</p>
+            </div>
+        </section>
     </div>
 
-    <div class="btn-getstart">
-        <button><a href="Login.html">Get Start</a></button>
-    </div>
-
-    <div class="footer-side">
-        <footer>
-            <p>© 2024 Pixora. All rights reserved.</p>
-        </footer>
-    </div>
+    <footer>
+        <p>© 2025 Pixora. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
