--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a href="">Card</a>
                     </div>
                     <div class="nav-2">
-                        <a href="register.html">register</a>
+                        <a href="register.html">Register</a>
                         <a href="Login.html">Login</a>
                     </div>
                 </div>
