--- a/editProfile.html
+++ b/editProfile.html
@@ -43,6 +43,12 @@
             <input type="tel" id="phone" name="phone" required><br><br>
 
             <button type="submit">Save Changes</button>
+    </form>
     </div>
+    <br>
+    <br> 
+    <footer>
+        <p>© 2025 Pixora. All rights reserved.</p>
+    </footer>
 </body>
 </html>
