update by pulling the latest changes from the

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <nav>
                 <div class="navbar">
-                    <h1>Pixora</h1>
+                    <h1 style="color: red;">Pixora</h1>
                     <div class="nav-3">
                         <a href="">Home</a>
                         <a href="">Gallery</a>
@@ -29,7 +29,6 @@
 
         <video autoplay muted loop playsinline class="video-bg">
             <source src="video3.mp4" type="video/mp4">
-            <!--<img src="https://www.pexels.com/download/video/34197941/" alt="background video">-->
         </video>
 
         <div class="video-back">
