index and StyleIndex

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
                 <div class="navbar">
                     <h1 style="color: red;">Pixora</h1>
                     <div class="nav-3">
-                        <a href="">Home</a>
-                        <a href="">Gallery</a>
-                        <a href="">Card</a>
+                        <a href="index.html">Home</a>
+                        <a href="#page-2">Step</a>  
                     </div>
                     <div class="nav-2">
                         <a href="register.html">Register</a>
@@ -48,7 +47,7 @@
 
     <hr>
 
-    <div class="page-2">
+    <div class="page-2" id="page-2">
         <h1>Become a Contributor</h1>
         <section class="all-card">
             <div class="card">
