--- a/Login.html
+++ b/Login.html
@@ -7,23 +7,16 @@
     <link rel="stylesheet" href="StyleLogin.css">
 </head>
 <body>
-    <div>
+    <div class="login-containner">
+        <div class="login-box">
         <form action="LoginSuccess.php" method="post">
-            <h2>ล็อคอิน</h2>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <br>
-            <label for="role">Login Type</label>
-            <select id="role" name="role" required>
-                <option value="user">User</option>
-                <option value="admin">Admin</option>
-            </select>
-            <br>
+            <h2>LOGIN</h2>
+            <input type="text" id="username" placeholder="email" name="username" required>
+            <input type="password" id="password" placeholder="password" name="password" required>
             <button type="submit" name="login">Login</button>
         </form>
+        <p>Don't have account? <a href="register.html">Register</a></p>
+        </div>
     </div>
 </body>
 </html>
